# RobotX

./: .gitignore  README.md  pyproject.toml
camera/: aggregator.py  autopilot.py  calibrate_camera.py  cam.py  camera_cal_matrix.yml  capture.py  capture_pipeline.py  cv_debugging.py  cv_utilities.py  detect_squares.py  file_utils.py  gps_utils.py  imgs_1716051060_00001.json  imgs_1716051065_00002.json  imgs_1716051070_00003.json  imgs_1716051075_00004.json  imgs_1716051334_00001.json  localization.py  localize_objects.py  localizer.py  main.py  object_detection.py  pixhawk_utils.py  test.py  time_utils.py  transformations.py  utils.py
camera/calibration_images/: old_cal_matrix.yml
camera/imgs/: image_1716051425_00001.json  image_1716051430_00002.json  image_1716051435_00003.json  image_1716051565_00001.json  image_1716051570_00002.json  image_1716051575_00003.json  image_1716051580_00004.json  image_1716051646_00001.json  image_1716051651_00002.json  image_1716051656_00003.json  image_1716051661_00004.json  image_1716051666_00005.json  image_1716051672_00006.json  image_1716051677_00007.json  image_1716051682_00008.json  image_1716051687_00009.json  image_1716051692_00010.json
camera/imgs2/: image_1716053745_00001.json  image_1716053791_00001.json  image_1716053796_00002.json  image_1716053801_00003.json  image_1716053806_00004.json  image_1716053812_00005.json  image_1716053871_00001.json  image_1716053876_00002.json  image_1716053881_00003.json  image_1716053886_00004.json  image_1716053891_00005.json
temp/: .cam.py.swp  Makefile  cam.py  image_matching  main.cpp
(+3 files in other folders)
